update css to prevent thumbnail image overflow on listing pages

--- a/themes/hugo-graphite/static/css/main-site.css
+++ b/themes/hugo-graphite/static/css/main-site.css
@@ -2136,3 +2136,7 @@ a > svg.anchor-symbol:hover {
 .mobile-only {
   display: none;
 }
+
+.listItem .itemImage {
+    overflow: hidden;
+ }
